@done: original imcomp ui works @todo: implement traherne ui

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
+include_directories( relja_register/det_ransac )
+include_directories( relja_register/features )
+include_directories( relja_register/external_lib/eigen )
+include_directories( relja_register/util )
+include_directories( relja_register/external_lib/KMCode_relja/exec/detect_points )
+include_directories( relja_register/external_lib/KMCode_relja/exec/compute_descriptors )
+
 add_subdirectory( http_server )
 add_subdirectory( imcomp )
 add_subdirectory( relja_register )
