@done: disabled relja_register compilation (vl_register used), updated CMakeLists.txt for VS 2017 @todo: make code compilable in vs 2017, add license.txt for all libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set (IMCOMP_SERVER_NAME "imcomp server")
 set (IMCOMP_SERVER_VERSION_MAJOR "2")
 set (IMCOMP_SERVER_VERSION_MINOR "0")
-set (IMCOMP_SERVER_VERSION_PATCH "1")
+set (IMCOMP_SERVER_VERSION_PATCH "2")
 set (IMCOMP_SERVER_AUTHOR_NAME "Abhishek Dutta")
 set (IMCOMP_SERVER_AUTHOR_EMAIL "adutta@robots.ox.ac.uk")
 set (IMCOMP_SERVER_FIRST_RELEASE "Nov. 2017")
@@ -32,29 +32,60 @@ configure_file (
   )
 
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+set( BUILD_SHARED_LIBS "OFF" )
 
 ## needed by KMcode_relja
-find_package( JPEG )
-find_package( PNG )
+#find_package( JPEG )
+#find_package( PNG )
 
 ## Boost
+if (NOT DEFINED     BOOST_ROOT        AND
+    NOT DEFINED ENV{BOOST_ROOT}       AND
+    NOT DEFINED     BOOST_INCLUDEDIR  AND
+    NOT DEFINED ENV{BOOST_INCLUDEDIR} AND
+    NOT DEFINED     BOOST_LIBRARYDIR  AND
+    NOT DEFINED ENV{BOOST_LIBRARYDIR})
+    if (APPLE)
+        set(BOOST_ROOT "@todo")
+    elseif (WIN32)
+        set(BOOST_ROOT "C:/Users/tlm/deps/boost_1_65_1")
+		set(BOOST_INCLUDEDIR "C:/Users/tlm/deps/boost_1_65_1")
+        set(BOOST_LIBRARYDIR "C:/Users/tlm/deps/boost_1_65_1/lib64-msvc-14.1")
+    endif()
+endif()
+
 find_package(Boost 1.48.0 COMPONENTS filesystem system thread atomic REQUIRED)
+#find_package(Boost 1.48.0 COMPONENTS REQUIRED)
 link_directories( ${Boost_LIBRARY_DIRS} )
 include_directories( ${Boost_INCLUDE_DIRS} )
 
 ## Magick++
-find_package( ImageMagick COMPONENTS Magick++ REQUIRED )
-include_directories( ${ImageMagick_INCLUDE_DIRS} )
-ADD_DEFINITIONS(-DRR_MAGICK)
-ADD_DEFINITIONS(-DMAGICKCORE_HDRI_ENABLE=0)
-ADD_DEFINITIONS(-DMAGICKCORE_QUANTUM_DEPTH=16)
+#if (NOT DEFINED     ImageMagick_LIBRARIES        AND
+#    NOT DEFINED ENV{ImageMagick_LIBRARIES}       AND
+#    NOT DEFINED     ImageMagick_INCLUDE_DIRS  AND
+#    NOT DEFINED ENV{ImageMagick_INCLUDE_DIRS})
+#    if (APPLE)
+#        set(ImageMagick_LIBRARIES "@todo")
+#		set(ImageMagick_INCLUDE_DIRS "@todo")
+#    elseif (WIN32)
+#		set(ImageMagick_LIBRARIES "C:/Program Files/ImageMagick-6.9.9-Q8/lib;C:/Program Files/ImageMagick-6.9.9-Q8")
+#		set(ImageMagick_INCLUDE_DIRS "C:/Program Files/ImageMagick-6.9.9-Q8/include")
+#    endif()
+#endif()
 
-message("JPEG_LIBRARIES: " ${JPEG_LIBRARIES})
-message("JPEG_INCLUDE_DIR: " ${JPEG_INCLUDE_DIR})
-message("ZLIB_LIBRARIES: " ${ZLIB_LIBRARIES})
-message("ZLIB_INCLUDE_DIRS: " ${ZLIB_INCLUDE_DIRS})
-message("PNG_LIBRARIES: " ${PNG_LIBRARIES})
-message("PNG_INCLUDE_DIRS: " ${PNG_INCLUDE_DIRS})
+find_package( ImageMagick COMPONENTS Magick++ REQUIRED )
+#find_package( ImageMagick )
+include_directories( ${ImageMagick_INCLUDE_DIRS} )
+#ADD_DEFINITIONS(-DRR_MAGICK)
+ADD_DEFINITIONS(-DMAGICKCORE_HDRI_ENABLE=0)
+ADD_DEFINITIONS(-DMAGICKCORE_QUANTUM_DEPTH=8)
+
+#message("JPEG_LIBRARIES: " ${JPEG_LIBRARIES})
+#message("JPEG_INCLUDE_DIR: " ${JPEG_INCLUDE_DIR})
+#message("ZLIB_LIBRARIES: " ${ZLIB_LIBRARIES})
+#message("ZLIB_INCLUDE_DIRS: " ${ZLIB_INCLUDE_DIRS})
+#message("PNG_LIBRARIES: " ${PNG_LIBRARIES})
+#message("PNG_INCLUDE_DIRS: " ${PNG_INCLUDE_DIRS})
 
 message("Boost_LIBRARIES: " ${Boost_LIBRARIES})
 message("Boost_INCLUDE_DIRS: " ${Boost_INCLUDE_DIRS})
@@ -62,20 +93,18 @@ message("ImageMagick_LIBRARIES: " ${ImageMagick_LIBRARIES} )
 message("ImageMagick_INCLUDE_DIRS: " ${ImageMagick_INCLUDE_DIRS} )
 
 ## pack static resources (html, css, js, etc) as compiled C++ asset
-set(PACK_IMCOMP_ASSET_CMD "${CMAKE_CURRENT_SOURCE_DIR}/scripts/pack_imcomp_asset.sh")
-set(ASSET_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/static/")
-set(TARGET_CPP_ASSET_FILE "${CMAKE_CURRENT_SOURCE_DIR}/src/imcomp/imcomp_asset.cc")
-message("ASSET_SRC_DIR: " ${ASSET_SRC_DIR})
-message("TARGET_CPP_ASSET_FILE: " ${TARGET_CPP_ASSET_FILE})
-message("PACK_IMCOMP_ASSET_CMD: " ${PACK_IMCOMP_ASSET_CMD})
+#set(PACK_IMCOMP_ASSET_CMD "${CMAKE_CURRENT_SOURCE_DIR}/scripts/pack_imcomp_asset.sh")
+#set(ASSET_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/static/")
+#set(TARGET_CPP_ASSET_FILE "${CMAKE_CURRENT_SOURCE_DIR}/src/imcomp/imcomp_asset.cc")
+#message("ASSET_SRC_DIR: " ${ASSET_SRC_DIR})
+#message("TARGET_CPP_ASSET_FILE: " ${TARGET_CPP_ASSET_FILE})
+#message("PACK_IMCOMP_ASSET_CMD: " ${PACK_IMCOMP_ASSET_CMD})
 
-execute_process( COMMAND ${PACK_IMCOMP_ASSET_CMD} ${ASSET_SRC_DIR} ${TARGET_CPP_ASSET_FILE}
-  RESULT_VARIABLE CMD_ERR
-  OUTPUT_VARIABLE CMD_OUTPUT)
-MESSAGE( STATUS "Result of packing static resources : " ${CMD_OUTPUT})
+#execute_process( COMMAND ${PACK_IMCOMP_ASSET_CMD} ${ASSET_SRC_DIR} ${TARGET_CPP_ASSET_FILE}
+#  RESULT_VARIABLE CMD_ERR
+#  OUTPUT_VARIABLE CMD_OUTPUT)
+#MESSAGE( STATUS "Result of packing static resources : " ${CMD_OUTPUT})
 
 include_directories("${PROJECT_INCLUDE_DIR}")
 add_subdirectory("${PROJECT_SOURCE_DIR}" )
 add_subdirectory("${PROJECT_TEST_DIR}" )
-
-
