--- a/src/vlfeat_register/CMakeLists.txt
+++ b/src/vlfeat_register/CMakeLists.txt
@@ -7,11 +7,8 @@ endif()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-# VLFEAT
-set(VLFEAT_LIBRARIES "/data/mybin/vlfeat/vlfeat-0.9.20/bin/glnxa64/libvl.so")
-
 add_subdirectory( external_lib )
 
 add_library( vl_register_images STATIC vl_register_images.cc )
-target_link_libraries( vl_register_images ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} ${VLFEAT_LIBRARIES})
+target_link_libraries( vl_register_images ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} ${VLFEAT_LIBRARIES} Eigen3::Eigen)
 
