--- a/src/vlfeat_register/CMakeLists.txt
+++ b/src/vlfeat_register/CMakeLists.txt
@@ -10,3 +10,6 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_library( vl_register_images STATIC vl_register_images.cc )
 target_link_libraries( vl_register_images ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} ${VLFEAT_LIB} Eigen3::Eigen)
 
+add_executable( test_vl_register_images test_vl_register_images.cc )
+target_link_libraries( test_vl_register_images vl_register_images ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES})
+
