--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
-include_directories( vlfeat_register/ )
+include_directories( imreg_sift )
 
 add_subdirectory( http_server )
 add_subdirectory( imcomp )
 add_subdirectory( util )
-add_subdirectory( vlfeat_register )
+add_subdirectory( imreg_sift )
 
 add_executable( imcomp_server imcomp_server.cc )
 target_link_libraries( imcomp_server http_server imcomp_request_handler ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES})
