--- a/src/imcomp/CMakeLists.txt
+++ b/src/imcomp/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_library( imcomp_request_handler imcomp_request_handler.cc imcomp_asset.cc)
+add_library( imcomp_request_handler imcomp_request_handler.cc)
 target_link_libraries( imcomp_request_handler http_request http_response util imreg_sift ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} )
-
