@done: basic windows installer (a lot of improvements needs to be done)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,9 @@ configure_file (
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 set( BUILD_SHARED_LIBS "OFF" )
 IF(WIN32)
-    SET(CMAKE_FIND_LIBRARY_SUFFIXES .lib .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
+  SET(CMAKE_FIND_LIBRARY_SUFFIXES .lib .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
 ELSE(WIN32)
-    SET(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
+  SET(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
 ENDIF(WIN32)
 
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -123,3 +123,46 @@ message("VLFEAT_INCLUDE_DIR: " ${VLFEAT_INCLUDE_DIR} )
 include_directories("${PROJECT_INCLUDE_DIR}")
 add_subdirectory("${PROJECT_SOURCE_DIR}" )
 add_subdirectory("${PROJECT_TEST_DIR}" )
+
+##
+## Packaging installer using cpack
+##
+## See
+## - https://github.com/mgalloy/cpack-cheatsheets/blob/master/cpack-variables.rst
+if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+  INCLUDE(InstallRequiredSystemLibraries)
+  SET(CPACK_GENERATOR "NSIS")
+  SET(CPACK_PACKAGE_NAME "Traherne")
+  SET(CPACK_PACKAGE_VENDOR "Abhishek Dutta <adutta@robots.ox.ac.uk>")
+  SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Traherne Digital Collator")
+  SET(CPACK_PACKAGE_VERSION "${IMCOMP_SERVER_VERSION_MAJOR}.${IMCOMP_SERVER_VERSION_MINOR}.${IMCOMP_SERVER_VERSION_PATCH}")
+  SET(CPACK_PACKAGE_VERSION_MAJOR ${IMCOMP_SERVER_VERSION_MAJOR})
+  SET(CPACK_PACKAGE_VERSION_MINOR ${IMCOMP_SERVER_VERSION_MINOR})
+  SET(CPACK_PACKAGE_VERSION_PATCH ${IMCOMP_SERVER_VERSION_PATCH})
+  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "Traherne Digital Collator")
+  SET(CPACK_PACKAGE_EXECUTABLES "Traherne" "Traherne Digital Collator")
+  SET(CPACK_SYSTEM_NAME "Win64")
+  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+  SET(CPACK_CREATE_DESKTOP_LINKS "bin\\\\Traherne.exe")
+  #SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/asset/images/traherne/traherne_48x48.ico")
+
+  SET(CPACK_NSIS_CONTACT "Abhishek Dutta <adutta@robots.ox.ac.uk>")
+  #SET(CPACK_NSIS_CREATE_ICONS_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/asset/images/traherne/traherne_48x48.ico")
+  SET(CPACK_NSIS_DISPLAY_NAME "Traherne Digital Collator")
+  SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL "ON")
+  SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\Traherne.exe")
+  SET(CPACK_NSIS_HELP_LINK "http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/")
+  SET(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/asset/imcomp/traherne/images/traherne/traherne_48x48.ico")
+  SET(CPACK_NSIS_PACKAGE_NAME "Traherne Digital Collator")
+  SET(CPACK_NSIS_URL_INFO_ABOUT "http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/")
+  
+  # @todo avoid hard coded paths
+  INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/asset" DESTINATION "bin")
+  INSTALL(DIRECTORY "C:\\\\Users\\\\tlm\\\\deps\\\\win_x64\\\\cpack_libs\\\\" DESTINATION "bin")
+  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION ".")
+  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION ".")
+  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/CHANGELOG" DESTINATION ".")
+  INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/third_party_licenses" DESTINATION ".")
+  
+  INCLUDE(CPack)
+endif()
