@done:  - added licenses  - increased RANSAC iter  - fixed traherne UI for large width images

--- a/src/imcomp_server_config.h.in
+++ b/src/imcomp_server_config.h.in
@@ -6,6 +6,7 @@
 #define IMCOMP_SERVER_VERSION_MAJOR "${IMCOMP_SERVER_VERSION_MAJOR}"
 #define IMCOMP_SERVER_VERSION_MINOR "${IMCOMP_SERVER_VERSION_MINOR}"
 #define IMCOMP_SERVER_VERSION_PATCH "${IMCOMP_SERVER_VERSION_PATCH}"
+#define IMCOMP_SERVER_URL "${IMCOMP_SERVER_URL}"
 
 #define IMCOMP_SERVER_AUTHOR_NAME "${IMCOMP_SERVER_AUTHOR}"
 #define IMCOMP_SERVER_AUTHOR_EMAIL "${IMCOMP_SERVER_AUTHOR_EMAIL}"
