fixed misspelled define constant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,7 +152,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     
     INSTALL(DIRECTORY "C:\\\\Users\\\\tlm\\\\deps\\\\win_x86\\\\cpack_libs\\\\" DESTINATION "bin")
   endif()
-  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
   SET(CPACK_CREATE_DESKTOP_LINKS "bin\\\\Traherne.exe")
   #SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/asset/images/traherne/traherne_48x48.ico")
 
@@ -168,7 +168,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   
   # @todo avoid hard coded paths
   INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/asset" DESTINATION "bin")
-  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION ".")
+  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt" DESTINATION ".")
   INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION ".")
   INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/CHANGELOG" DESTINATION ".")
   INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/third_party_licenses" DESTINATION ".")
