--- a/src/imcomp_server_config.h.in
+++ b/src/imcomp_server_config.h.in
@@ -8,7 +8,7 @@
 #define IMCOMP_SERVER_VERSION_PATCH "${IMCOMP_SERVER_VERSION_PATCH}"
 #define IMCOMP_SERVER_URL "${IMCOMP_SERVER_URL}"
 
-#define IMCOMP_SERVER_AUTHOR_NAME "${IMCOMP_SERVER_AUTHOR}"
+#define IMCOMP_SERVER_AUTHOR_NAME "${IMCOMP_SERVER_AUTHOR_NAME}"
 #define IMCOMP_SERVER_AUTHOR_EMAIL "${IMCOMP_SERVER_AUTHOR_EMAIL}"
 #define IMCOMP_SERVER_FIRST_RELEASE_DATE "${IMCOMP_SERVER_FIRST_RELEASE_DATE}"
 #define IMCOMP_SERVER_CURRENT_RELEASE_DATE "${IMCOMP_SERVER_CURRENT_RELEASE_DATE}"
