windows build done for 2.0.3 release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ endif()
 ##
 if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   #set(CMAKE_CXX_FLAGS_RELEASE "-Ox")
+  #set(CMAKE_CXX_FLAGS_RELEASE "/MT")
+  
   SET(WINDOWS_RESOURCE_FILENAME "${CMAKE_CURRENT_SOURCE_DIR}/resources/win/imcomp_server_win_res.rc")
   
   if(CMAKE_GENERATOR_PLATFORM MATCHES "x64")
