working on a MacOS build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,21 +34,18 @@ configure_file (
   )
 
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+
 set( BUILD_SHARED_LIBS "OFF" )
 
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
   message("*** Debug Mode: test code will be compiled and built. ***")
 ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
 
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-	set(CMAKE_CXX_FLAGS "-fpermissive")
-endif()
-
 ##
 ## Define variables for Windows build
 ## @todo avoid hard coded paths
 ##
-if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+if(WIN32)
   #set(CMAKE_CXX_FLAGS_RELEASE "-Ox")
   #set(CMAKE_CXX_FLAGS_RELEASE "/MT")
   
@@ -75,10 +72,31 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   #ADD_DEFINITIONS(-D_WIN32_WINDOWS) # this prevents graceful exit from console application
 endif()
 
+##
+## MacOS build settings
+## @todo avoid using hard coded paths
+##
+if(APPLE)
+  #SET(WINDOWS_RESOURCE_FILENAME "${CMAKE_CURRENT_SOURCE_DIR}/resources/win/imcomp_server_win_res.rc")
+  
+  SET (VLFEAT_LIB "/Users/tlm/deps/imcomp/tmp_libsrc/vlfeat-0.9.21/bin/maci64/libvl.dylib")
+  SET (VLFEAT_INCLUDE_DIR "/Users/tlm/deps/imcomp/tmp_libsrc/vlfeat-0.9.21")
+  SET (IMCOMP_DEPS_BASEDIR "")
+  SET (BOOST_ROOT "/Users/tlm/deps/imcomp/lib")
+  SET (Eigen3_DIR "/Users/tlm/deps/imcomp/tmp_libsrc/Eigen-3.3.4")
+
+  #STRING(REPLACE "\\" "\\\\" IMCOMP_DEPS_BASEDIR_2SLASH ${IMCOMP_DEPS_BASEDIR})
+  #STRING(REPLACE "\\" "\\\\" IMCOMP_DEPS_BASEDIR_4SLASH ${IMCOMP_DEPS_BASEDIR_2SLASH})
+  #message("IMCOMP_DEPS_BASEDIR: " ${IMCOMP_DEPS_BASEDIR})
+  #message("IMCOMP_DEPS_BASEDIR_2SLASH: " ${IMCOMP_DEPS_BASEDIR_2SLASH})
+  #message("IMCOMP_DEPS_BASEDIR_4SLASH: " ${IMCOMP_DEPS_BASEDIR_4SLASH})
+  #ADD_DEFINITIONS(-D_WIN32_WINDOWS) # this prevents graceful exit from console application
+endif()
+
 ## Boost
 find_package(Boost 1.64.0 COMPONENTS filesystem system thread atomic REQUIRED)
-if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-	set( Boost_USE_MULTITHREADED ON )
+if(WIN32)
+  set( Boost_USE_MULTITHREADED ON )
   set( Boost_USE_DEBUG_RUNTIME OFF )
   set( Boost_USE_STATIC_RUNTIME OFF )
   set( Boost_USE_STATIC_LIBS OFF )
@@ -93,7 +111,8 @@ include_directories( ${Boost_INCLUDE_DIRS} )
 ## ImageMagick
 ADD_DEFINITIONS(-DMAGICKCORE_HDRI_ENABLE=0)
 ADD_DEFINITIONS(-DMAGICKCORE_QUANTUM_DEPTH=8)
-if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+# for Windows, we have to manually set the location of ImageMagick libraries
+if(WIN32)
   set(ImageMagick_INCLUDE_DIRS "\
 ${IMCOMP_DEPS_BASEDIR_2SLASH}\\ImageMagick-6.9.9-36\\ImageMagick;\
 ${IMCOMP_DEPS_BASEDIR_2SLASH}\\ImageMagick-6.9.9-36\\ImageMagick\\Magick++\\lib;\
@@ -101,13 +120,20 @@ ${IMCOMP_DEPS_BASEDIR_2SLASH}\\ImageMagick-6.9.9-36\\ImageMagick\\Magick++\\lib;
   include_directories( ${ImageMagick_INCLUDE_DIRS} )
   SET(ImageMagick_LIBRARIES "CORE_RL_Magick++_;CORE_RL_magick_;CORE_RL_wand_")
   link_directories("${IMCOMP_DEPS_BASEDIR_2SLASH}\\ImageMagick-6.9.9-36\\VisualMagick\\lib")
-endif()
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+else()
+  # for Linux and MacOS, the automatic detection is ok
   find_package( ImageMagick COMPONENTS Magick++ REQUIRED )
-  # @todo: on alienware, find_package() points to "/usr/lib/x86_64-linux-gnu/libMagick++-6.Q16.so"
-  # and does not detect the library available at "/home/tlm/deps/imcomp/lib/lib/libMagick++-6.Q8.so"
-  set(ImageMagick_LIBRARIES "/home/tlm/deps/imcomp/lib/lib/libMagick++-6.Q8.so")
   include_directories( ${ImageMagick_INCLUDE_DIRS} )
+endif()
+
+##
+## For some reason, cmake detects Q16 version of ImageMagick library in my laptop
+## so this fix is needed for my personal development environment ONLY
+## @todo: on alienware, find_package() points to "/usr/lib/x86_64-linux-gnu/libMagick++-6.Q16.so"
+## and does not detect the library available at "/home/tlm/deps/imcomp/lib/lib/libMagick++-6.Q8.so"
+cmake_host_system_information(RESULT _host_name QUERY HOSTNAME)
+if(_host_name MATCHES "0x02")
+  set(ImageMagick_LIBRARIES "/home/tlm/deps/imcomp/lib/lib/libMagick++-6.Q8.so")
 endif()
 
 # Eigen
@@ -136,7 +162,7 @@ add_subdirectory("${PROJECT_TEST_DIR}" )
 ##
 ## See
 ## - https://github.com/mgalloy/cpack-cheatsheets/blob/master/cpack-variables.rst
-if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+if(WIN32)
   INCLUDE(InstallRequiredSystemLibraries)
   SET(CPACK_GENERATOR "NSIS")
   SET(CPACK_PACKAGE_NAME "${RELEASE_PACKAGE_NAME}")
@@ -189,5 +215,27 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/CHANGELOG" DESTINATION ".")
   INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/third_party_licenses" DESTINATION ".")
   
+  INCLUDE(CPack)
+endif()
+
+##
+## MacOS
+##
+if(APPLE)
+  INCLUDE(InstallRequiredSystemLibraries)
+  SET(CPACK_PACKAGE_NAME "${RELEASE_PACKAGE_NAME}")
+  SET(CPACK_PACKAGE_VENDOR "Visual Geometry Group")
+  SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${RELEASE_PACKAGE_DESCRIPTION}")
+  SET(CPACK_PACKAGE_VERSION "${IMCOMP_SERVER_VERSION_MAJOR}.${IMCOMP_SERVER_VERSION_MINOR}.${IMCOMP_SERVER_VERSION_PATCH}")
+  SET(CPACK_PACKAGE_VERSION_MAJOR ${IMCOMP_SERVER_VERSION_MAJOR})
+  SET(CPACK_PACKAGE_VERSION_MINOR ${IMCOMP_SERVER_VERSION_MINOR})
+  SET(CPACK_PACKAGE_VERSION_PATCH ${IMCOMP_SERVER_VERSION_PATCH})
+  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${RELEASE_PACKAGE_DESCRIPTION}")
+
+  # icon
+  SET(MACOSX_BUNDLE_ICON_FILE "traherne_icon.icns")
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+
+  SET(CPACK_BINARY_DRAGNDROP ON)  
   INCLUDE(CPack)
 endif()
