macos installer (ongoing)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,6 +223,7 @@ endif()
 ##
 if(APPLE)
   INCLUDE(InstallRequiredSystemLibraries)
+  SET(CPACK_GENERATOR "Bundle")
   SET(CPACK_PACKAGE_NAME "${RELEASE_PACKAGE_NAME}")
   SET(CPACK_PACKAGE_VENDOR "Visual Geometry Group")
   SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${RELEASE_PACKAGE_DESCRIPTION}")
@@ -232,10 +233,16 @@ if(APPLE)
   SET(CPACK_PACKAGE_VERSION_PATCH ${IMCOMP_SERVER_VERSION_PATCH})
   SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${RELEASE_PACKAGE_DESCRIPTION}")
 
-  # icon
-  SET(MACOSX_BUNDLE_ICON_FILE "traherne_icon.icns")
-  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+  SET(CPACK_BUNDLE_NAME "${RELEASE_PACKAGE_NAME}")
+  SET(CPACK_BUNDLE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns")
+  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
+  SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+  SET(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/resources.plist")
 
-  SET(CPACK_BINARY_DRAGNDROP ON)  
+  # icon
+  #SET(MACOSX_BUNDLE_ICON_FILE "traherne_icon.icns")
+  #SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+
+  #SET(CPACK_BINARY_DRAGNDROP ON)  
   INCLUDE(CPack)
 endif()
