--- a/src/http_server/CMakeLists.txt
+++ b/src/http_server/CMakeLists.txt
@@ -2,9 +2,11 @@ add_library( http_request STATIC http_request.cc)
 add_library( http_response STATIC http_response.cc)
 
 add_library( http_server STATIC http_server.cc connection.cc)
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+if(LINUX)
   target_link_libraries( http_server http_request http_response imcomp_request_handler ${Boost_LIBRARIES} pthread m)
-else()
+elseif(APPLE)
+  target_link_libraries( http_server http_request http_response imcomp_request_handler ${Boost_LIBRARIES})
+elseif(WIN32)
   target_link_libraries( http_server http_request http_response imcomp_request_handler ${Boost_LIBRARIES})
 endif()
 
